Arreglada la constraint IsTeacher y ejemplo de prueba en main, faltan clases y referencias internas